# romanesco

./: .gitignore  README.md  pyproject.toml  schema.sql  setup.py
romanesco/: __init__.py  __main__.py  logger.py  login.py  schema.sql  util.py
romanesco/botccoli/: __main__.py  processor.py
romanesco/botccoli/adapters/: __init__.py  axfood.py  willys.py
romanesco/model/: __init__.py  deposits.py  lookups.py  receipt.py  split_receipt.py  statistics.py  templates.py  util.py
romanesco/model/receipt_formats/: __init__.py  axfood.py  ica.py  willys.py
romanesco/model/receipts/: __init__.py  receipt.py  util.py
romanesco/model/receipts/formats/: __init__.py  ica.py  willys.py
romanesco/model/statistics/: __init__.py  get.py  update.py  util_dateocc.py
romanesco/notifier/: __main__.py  totals.py
romanesco/static/: styles-receipt.css  styles.css
romanesco/templates/: _base.html  _events.html  _stats_table.html  deposit_new.html  index.html  login.html  receipt_edit.html  receipt_upload.html  stats_all_totals.html  stats_category_totals.html  stats_totals.html  stats_user_totals.html
romanesco/views/: __init__.py  admin.py  deposits.py  index.py  receipts.py  stats.py  templates.py
romanesco/xdb/: __init__.py  postgresql.py  schema_postgresql.sql  schema_sqlite.sql  sqlite.py
