[project]
name = "romanesco"
version = "1.9.2"
description = "Expenses reporting system"
urls = {repository = "https://github.com/rubenseyer/romanesco"}
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "Flask ~= 3.0.3",
  "pdfminer.six >= 20231228"
]

[project.optional-dependencies]
bjoern = ["bjoern"]
botccoli = [
  "selenium ~= 4.18.1",
  "requests ~= 2.31.0",
  "cryptography ~= 42.0.5"
]
sqlite = ["apsw ~= 3.45.3.0"]
postgresql = ["psycopg[c] ~= 3.1.17"]
notify = ["tabulate ~= 0.9.0"]

[project.scripts]
romanesco = "romanesco.__main__:main"
botccoli = "romanesco.botccoli.__main__:main"
romanesco-notify = "romanesco.notifier.__main__:main"

[tool.setuptools]
include-package-data = false
package-data = {romanesco = ["static/*", "templates/*", "xdb/*.sql"]}

[tool.setuptools.packages.find]
where = [""]
include = ["romanesco*"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
