[project]
name = "romanesco"
version = "1.10.0"
description = "Expenses reporting system"
urls = {repository = "https://github.com/rubenseyer/romanesco"}
requires-python = ">=3.12"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "Flask ~= 3.1",
  "pdfminer.six >= 20231228"
]

[project.optional-dependencies]
bjoern = ["bjoern"]
botccoli = [
  "selenium ~= 4.29",
  "requests ~= 2.32",
  "cryptography ~= 44.0"
]
sqlite = ["apsw ~= 3.46"]
postgresql = ["psycopg[c] ~= 3.2"]
notify = ["tabulate ~= 0.9"]

[project.scripts]
romanesco = "romanesco.__main__:main"
botccoli = "romanesco.botccoli.__main__:main"
romanesco-notify = "romanesco.notifier.__main__:main"

[tool.setuptools]
include-package-data = false
package-data = {romanesco = ["static/*", "templates/*", "xdb/*.sql"]}

[tool.setuptools.packages.find]
where = [""]
include = ["romanesco*"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
